--- a/package.json
+++ b/package.json
@@ -97,6 +97,7 @@
     "node-sass": "^4.9.3",
     "nodemon": "^1.18.4",
     "normalize-scss": "^7.0.1",
+    "optimize-css-assets-webpack-plugin": "^5.0.1",
     "postcss-loader": "^3.0.0",
     "prettier": "^1.14.2",
     "promise": "^8.0.1",
