--- a/package.json
+++ b/package.json
@@ -80,6 +80,7 @@
     "enzyme": "^3.5.1",
     "enzyme-adapter-react-16": "^1.4.0",
     "eslint": "^5.5.0",
+    "eslint-config-prettier": "^3.0.1",
     "eslint-config-react-app": "^2.1.0",
     "eslint-plugin-flowtype": "^2.50.0",
     "eslint-plugin-import": "^2.14.0",
