--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "component library prototype",
   "main": "dist/ComponentLibraryExample.js",
   "scripts": {
+    "postinstall": "npm rebuild node-sass",
     "start": "webpack-dev-server --color --mode development",
     "start2": "nodemon --watch webpack.config.js ./node_modules/.bin/webpack-dev-server --color --mode development",
     "build": "webpack --mode production",
@@ -70,14 +71,14 @@
     "autoprefixer": "^9.1.5",
     "babel-core": "npm:@babel/core",
     "babel-eslint": "^9.0.0",
-    "babel-jest": "^23.4.2",
+    "babel-jest": "^23.6.0",
     "babel-loader": "^8.0.2",
     "babel-runtime": "^6.26.0",
     "browser-sync": "^2.24.7",
     "clean-webpack-plugin": "^0.1.19",
     "copy-webpack-plugin": "^4.5.2",
     "css-loader": "^1.0.0",
-    "enzyme": "^3.5.1",
+    "enzyme": "^3.6.0",
     "enzyme-adapter-react-16": "^1.5.0",
     "eslint": "^5.5.0",
     "eslint-config-prettier": "^3.0.1",
@@ -92,7 +93,7 @@
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
     "identity-obj-proxy": "^3.0.0",
-    "jest": "^23.5.0",
+    "jest": "^23.6.0",
     "lodash": "^4.17.10",
     "mini-css-extract-plugin": "^0.4.2",
     "node-sass": "^4.9.3",
@@ -103,19 +104,19 @@
     "prettier": "^1.14.2",
     "promise": "^8.0.1",
     "raw-loader": "^0.5.1",
-    "react": "^16.4.2",
+    "react": "^16.5.0",
     "react-dom": "^16.5.0",
     "react-test-renderer": "^16.5.0",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.0",
     "uglifyjs-webpack-plugin": "^1.3.0",
     "url-loader": "^1.1.1",
-    "webpack": "^4.17.2",
+    "webpack": "^4.18.0",
     "webpack-cli": "^3.1.0",
     "webpack-dev-server": "^3.1.8",
     "webpack-hot-middleware": "^2.23.1",
     "webpack-md5-hash": "0.0.6",
-    "whatwg-fetch": "^2.0.4"
+    "whatwg-fetch": "^3.0.0"
   },
   "dependencies": {
     "classnames": "^2.2.6",
