--- a/package.json
+++ b/package.json
@@ -119,7 +119,8 @@
     "webpack-dev-server": "^3.1.9",
     "webpack-hot-middleware": "^2.24.2",
     "webpack-md5-hash": "0.0.6",
-    "whatwg-fetch": "^3.0.0"
+    "whatwg-fetch": "^3.0.0",
+    "immer": "1.7.2"
   },
   "dependencies": {
     "classnames": "^2.2.6",
