--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
       "^components/templates$": "<rootDir>/src/components/templates",
       "^components/app$": "<rootDir>/src/components/app",
       "^src/icon-system$": "<rootDir>/src/icon-system",
+      "^src/utils$": "<rootDir>/src/utils",
       "^components/styles$": "<rootDir>/src/components/styles"
     },
     "testEnvironment": "node",
@@ -77,15 +78,22 @@
     ],
     "modulePaths": [],
     "moduleDirectories": [
+      "node_modules",
       "<rootDir>/src"
+    ],
+    "moduleFileExtensions": [
+      "js",
+      "jsx",
+      "css",
+      "scss"
     ]
   },
   "devDependencies": {
     "@babel/core": "^7.1.2",
     "@babel/plugin-proposal-class-properties": "^7.1.0",
     "@babel/plugin-proposal-object-rest-spread": "^7.0.0",
-    "@babel/plugin-transform-runtime": "^7.1.0",
     "@babel/plugin-syntax-dynamic-import": "7.0.0",
+    "@babel/plugin-transform-runtime": "^7.1.0",
     "@babel/preset-env": "^7.1.0",
     "@babel/preset-react": "^7.0.0",
     "@babel/runtime": "^7.1.2",
@@ -102,6 +110,7 @@
     "babel-eslint": "^10.0.1",
     "babel-jest": "^23.6.0",
     "babel-loader": "^8.0.4",
+    "babel-plugin-module-resolver": "^3.1.1",
     "babel-runtime": "^6.26.0",
     "browser-sync": "^2.24.7",
     "clean-webpack-plugin": "^0.1.19",
@@ -112,6 +121,7 @@
     "eslint": "^5.6.1",
     "eslint-config-prettier": "^3.1.0",
     "eslint-config-react-app": "^3.0.3",
+    "eslint-import-resolver-webpack": "^0.10.1",
     "eslint-plugin-flowtype": "^2.50.3",
     "eslint-plugin-import": "^2.14.0",
     "eslint-plugin-jsx-a11y": "^6.1.1",
@@ -122,6 +132,7 @@
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
     "identity-obj-proxy": "^3.0.0",
+    "immer": "1.7.2",
     "jest": "^23.6.0",
     "lodash": "^4.17.11",
     "mini-css-extract-plugin": "^0.4.3",
@@ -146,8 +157,7 @@
     "webpack-dev-server": "^3.1.9",
     "webpack-hot-middleware": "^2.24.2",
     "webpack-md5-hash": "0.0.6",
-    "whatwg-fetch": "^3.0.0",
-    "immer": "1.7.2"
+    "whatwg-fetch": "^3.0.0"
   },
   "dependencies": {
     "classnames": "^2.2.6",
