--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "sm": "source-map-explorer dist/ComponentLibraryExample.js",
     "sm2": "source-map-explorer dist/vendors.js",
     "build-deploy-storybook": "npm run build-storybook && npm run dsb",
-    "dummy-api": "json-server --watch db.json --port 3210"
+    "dummy-api": "json-server --watch server/db.json --port 4321"
   },
   "repository": {
     "type": "git",
@@ -147,8 +147,7 @@
     "webpack-dev-server": "^3.1.9",
     "webpack-hot-middleware": "^2.24.2",
     "webpack-md5-hash": "0.0.6",
-    "whatwg-fetch": "^3.0.0",
-    "json-server": "0.14.0"
+    "whatwg-fetch": "^3.0.0"
   },
   "dependencies": {
     "classnames": "^2.2.6",
