--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "component library prototype",
   "main": "dist/ComponentLibraryExample.js",
   "scripts": {
-    "postinstall": "npm rebuild node-sass",
+    "rebuild-node-sass": "npm rebuild node-sass",
     "start": "webpack-dev-server --color --mode development",
     "start2": "nodemon --watch webpack.config.js ./node_modules/.bin/webpack-dev-server --color --mode development",
     "build": "webpack --mode production",
