--- a/package.json
+++ b/package.json
@@ -5,8 +5,10 @@
   "main": "dist/ComponentLibraryExample.js",
   "scripts": {
     "rebuild-node-sass": "npm rebuild node-sass",
-    "start": "webpack-dev-server --color --mode development",
-    "start2": "nodemon --watch webpack.config.js ./node_modules/.bin/webpack-dev-server --color --mode development",
+    "start": "npm-run-all -p -r dummy-api webpack-dev-server",
+    "start:nodemon": "npm-run-all -p -r dummy-api nodemon-webpack-dev-server",
+    "webpack-dev-server": "webpack-dev-server --color --mode development --http",
+    "nodemon-webpack-dev-server": "nodemon --watch webpack.config.js ./node_modules/.bin/webpack-dev-server --color --mode development --http",
     "build": "webpack --mode production",
     "build:dev": "webpack --mode development",
     "storybook": "start-storybook -p 6006",
@@ -123,6 +125,7 @@
     "eslint-plugin-jsx-a11y": "^6.1.2",
     "eslint-plugin-prettier": "^3.0.0",
     "eslint-plugin-react": "^7.11.1",
+    "express": "4.16.4",
     "file-loader": "^2.0.0",
     "hoek": "5.0.4",
     "html-loader": "^0.5.5",
@@ -132,9 +135,11 @@
     "jest": "^23.6.0",
     "lodash": "^4.17.11",
     "mini-css-extract-plugin": "^0.4.3",
+    "minimist": "1.2.0",
     "node-sass": "^4.9.4",
     "nodemon": "^1.18.5",
     "normalize-scss": "^7.0.1",
+    "npm-run-all": "^4.1.3",
     "optimize-css-assets-webpack-plugin": "^5.0.1",
     "postcss-loader": "^3.0.0",
     "prettier": "^1.14.3",
@@ -153,9 +158,7 @@
     "webpack-dev-server": "^3.1.10",
     "webpack-hot-middleware": "^2.24.3",
     "webpack-md5-hash": "0.0.6",
-    "whatwg-fetch": "^3.0.0",
-    "express": "4.16.4",
-    "minimist": "1.2.0"
+    "whatwg-fetch": "^3.0.0"
   },
   "dependencies": {
     "classnames": "^2.2.6",
