--- a/package.json
+++ b/package.json
@@ -5,10 +5,11 @@
   "main": "dist/ComponentLibraryExample.js",
   "scripts": {
     "rebuild-node-sass": "npm rebuild node-sass",
-    "start": "npm-run-all -p -r dummy-api webpack-dev-server",
-    "start:nodemon": "npm-run-all -p -r dummy-api nodemon-webpack-dev-server",
-    "webpack-dev-server": "webpack-dev-server --color --mode development --http",
-    "nodemon-webpack-dev-server": "nodemon --watch webpack.config.js ./node_modules/.bin/webpack-dev-server --color --mode development --http",
+    "start": "npm-run-all -p -r dummy-api dev-server",
+    "start:single": "yarn dev-server",
+    "start:nodemon": "npm-run-all -p -r dummy-api nodemon-dev-server",
+    "dev-server": "webpack-dev-server --color --mode development --http",
+    "nodemon-dev-server": "nodemon --watch webpack.config.js ./node_modules/.bin/webpack-dev-server --color --mode development --http",
     "build": "webpack --mode production",
     "build:dev": "webpack --mode development",
     "storybook": "start-storybook -p 6006",
@@ -120,7 +121,7 @@
     "eslint-config-prettier": "^3.1.0",
     "eslint-config-react-app": "^3.0.4",
     "eslint-import-resolver-webpack": "^0.10.1",
-    "eslint-plugin-flowtype": "^3.1.1",
+    "eslint-plugin-flowtype": "^3.1.4",
     "eslint-plugin-import": "^2.14.0",
     "eslint-plugin-jsx-a11y": "^6.1.2",
     "eslint-plugin-prettier": "^3.0.0",
@@ -131,10 +132,10 @@
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
     "identity-obj-proxy": "^3.0.0",
-    "immer": "1.7.3",
+    "immer": "1.7.4",
     "jest": "^23.6.0",
     "lodash": "^4.17.11",
-    "mini-css-extract-plugin": "^0.4.3",
+    "mini-css-extract-plugin": "^0.4.4",
     "minimist": "1.2.0",
     "node-sass": "^4.9.4",
     "nodemon": "^1.18.5",
