--- a/package.json
+++ b/package.json
@@ -96,18 +96,18 @@
     "@babel/preset-env": "^7.3.1",
     "@babel/preset-react": "^7.0.0",
     "@babel/runtime": "^7.3.1",
-    "@storybook/addon-actions": "^4.1.7",
-    "@storybook/addon-backgrounds": "^4.1.7",
-    "@storybook/addon-links": "^4.1.7",
-    "@storybook/addon-notes": "^4.1.7",
-    "@storybook/addon-viewport": "^4.1.7",
-    "@storybook/addons": "^4.1.7",
-    "@storybook/react": "^4.1.7",
+    "@storybook/addon-actions": "^4.1.11",
+    "@storybook/addon-backgrounds": "^4.1.11",
+    "@storybook/addon-links": "^4.1.11",
+    "@storybook/addon-notes": "^4.1.11",
+    "@storybook/addon-viewport": "^4.1.11",
+    "@storybook/addons": "^4.1.11",
+    "@storybook/react": "^4.1.11",
     "@storybook/storybook-deployer": "^2.8.1",
     "autoprefixer": "^9.4.6",
     "babel-core": "npm:@babel/core",
     "babel-eslint": "^10.0.1",
-    "babel-jest": "^23.6.0",
+    "babel-jest": "^24.0.0",
     "babel-loader": "^8.0.5",
     "babel-plugin-module-resolver": "^3.1.3",
     "babel-runtime": "^6.26.0",
@@ -116,14 +116,14 @@
     "copy-webpack-plugin": "^4.6.0",
     "css-loader": "^2.1.0",
     "enzyme": "^3.8.0",
-    "enzyme-adapter-react-16": "^1.7.1",
+    "enzyme-adapter-react-16": "^1.8.0",
     "eslint": "^5.12.1",
-    "eslint-config-prettier": "^3.6.0",
+    "eslint-config-prettier": "^4.0.0",
     "eslint-config-react-app": "^3.0.6",
-    "eslint-import-resolver-webpack": "^0.10.1",
+    "eslint-import-resolver-webpack": "^0.11.0",
     "eslint-plugin-flowtype": "^3.2.1",
-    "eslint-plugin-import": "^2.14.0",
-    "eslint-plugin-jsx-a11y": "^6.1.2",
+    "eslint-plugin-import": "^2.15.0",
+    "eslint-plugin-jsx-a11y": "^6.2.0",
     "eslint-plugin-prettier": "^3.0.1",
     "eslint-plugin-react": "^7.12.4",
     "express": "4.16.4",
@@ -132,8 +132,8 @@
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
     "identity-obj-proxy": "^3.0.0",
-    "immer": "1.11.0",
-    "jest": "^23.6.0",
+    "immer": "1.12.1",
+    "jest": "^24.0.0",
     "lodash": "^4.17.11",
     "lodash.camelcase": "^4.3.0",
     "mini-css-extract-plugin": "^0.5.0",
@@ -144,7 +144,7 @@
     "npm-run-all": "^4.1.5",
     "optimize-css-assets-webpack-plugin": "^5.0.1",
     "postcss-loader": "^3.0.0",
-    "prettier": "^1.16.0",
+    "prettier": "^1.16.1",
     "promise": "^8.0.2",
     "raw-loader": "^1.0.0",
     "react": "^16.7.0",
@@ -153,8 +153,10 @@
     "react-test-renderer": "^16.7.0",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
+    "stylelint": "^9.10.1",
     "stylelint-config-prettier": "^4.0.0",
     "stylelint-config-recommended-scss": "^3.2.0",
+    "stylelint-scss": "^3.5.1",
     "uglifyjs-webpack-plugin": "^2.1.1",
     "url-loader": "^1.1.2",
     "webpack": "^4.29.0",
